--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -31,13 +31,13 @@
     <artifactId>domain</artifactId>
 
     <properties>
-        <quarkus-plugin.version>1.9.2.Final</quarkus-plugin.version>
+        <quarkus-plugin.version>2.5.2.Final</quarkus-plugin.version>
         <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
-        <quarkus.platform.version>1.9.2.Final</quarkus.platform.version>
-        <commons-codec.version>1.14</commons-codec.version>
-        <awssdk.version>2.15.68</awssdk.version>
-        <cognitoidentityprovider.version>2.13.19</cognitoidentityprovider.version>
+        <quarkus.platform.version>2.5.2.Final</quarkus.platform.version>
+        <commons-codec.version>1.15</commons-codec.version>
+        <awssdk.version>2.17.0</awssdk.version>
+        <cognitoidentityprovider.version>2.17.100</cognitoidentityprovider.version>
     </properties>
 
     <dependencyManagement>
@@ -63,8 +63,12 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>jakarta.enterprise</groupId>
-            <artifactId>jakarta.enterprise.cdi-api</artifactId>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
         </dependency>
 
         <dependency>
