--- a/pom.xml
+++ b/pom.xml
@@ -54,12 +54,12 @@
 
     <modules>
         <module>api</module>
-        <module>cognito</module>
         <module>domain</module>
         <module>dynamodb</module>
         <module>gwt</module>
         <module>istanbul</module>
-        <module>lambda-http</module>
+        <module>lambda-cognito</module>
+        <module>lambda-rest</module>
         <module>powergrid</module>
         <module>server</module>
         <module>dominant-species</module>
