--- a/server/pom.xml
+++ b/server/pom.xml
@@ -114,6 +114,10 @@
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>apache-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>apigatewaymanagementapi</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>commons-codec</groupId>
