Fix module name

--- a/lambda-cognito/pom.xml
+++ b/lambda-cognito/pom.xml
@@ -29,7 +29,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>cognito</artifactId>
+    <artifactId>lambda-cognito</artifactId>
 
     <dependencies>
         <dependency>
