Only enable WS server for local testing

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -45,6 +45,8 @@ bgf.sqs.enabled=true
 bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-prod
 %dev.bgf.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/boardgamefiesta-dev
 
+bgf.ws.server.enabled=false
+%dev.bgf.ws.server.enabled=true
 bgf.ws.connections-endpoint=https://5479own0ue.execute-api.eu-west-1.amazonaws.com/production
 
 bgf.url=https://boardgamefiesta.com
