--- a/dominant-species/pom.xml
+++ b/dominant-species/pom.xml
@@ -47,6 +47,10 @@
             <groupId>org.eclipse</groupId>
             <artifactId>yasson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
