Process SQS with Lambda instead of ECS container

--- a/lambda-rest/pom.xml
+++ b/lambda-rest/pom.xml
@@ -124,10 +124,18 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-amazon-ses</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-amazon-sqs</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>apache-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>apigatewaymanagementapi</artifactId>
         </dependency>
 
         <dependency>
