Extract generic and shared DynamoDB classes to separate modules

--- a/dynamodb/pom.xml
+++ b/dynamodb/pom.xml
@@ -39,6 +39,10 @@
             <groupId>com.boardgamefiesta</groupId>
             <artifactId>domain</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.boardgamefiesta</groupId>
+            <artifactId>dynamodb-shared</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
