--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,8 @@
         <module>rest-api</module>
         <module>lambda-ws</module>
         <module>lambda-automa</module>
+        <module>dynamodb-generic</module>
+        <module>dynamodb-shared</module>
     </modules>
 
     <dependencyManagement>
@@ -84,6 +86,16 @@
             </dependency>
             <dependency>
                 <groupId>com.boardgamefiesta</groupId>
+                <artifactId>dynamodb-generic</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.boardgamefiesta</groupId>
+                <artifactId>dynamodb-shared</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.boardgamefiesta</groupId>
                 <artifactId>games</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -92,7 +104,6 @@
                 <artifactId>rest-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
