--- a/lambda-websocket/pom.xml
+++ b/lambda-websocket/pom.xml
@@ -43,6 +43,10 @@
             <groupId>com.boardgamefiesta</groupId>
             <artifactId>user</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.boardgamefiesta</groupId>
+            <artifactId>table</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.quarkus</groupId>
