--- a/lambda-automa/src/main/resources/application.properties
+++ b/lambda-automa/src/main/resources/application.properties
@@ -17,6 +17,7 @@
 #
 
 quarkus.log.level=INFO
+quarkus.log.category."com.boardgamefiesta".level=DEBUG
 %dev.quarkus.log.category."com.boardgamefiesta".level=DEBUG
 #%dev.quarkus.log.category."io.quarkus.narayana".level=TRACE
 #%dev.quarkus.log.category."com.arjuna.ats.jta".level=TRACE
